# weather-bot

./: .editorconfig  Cargo.toml  README.md  docker-compose.yml  plane.kanban
.gitea/workflows/: ci.yaml  test.yaml
src/: db.rs  geo.rs  main.rs  weather.rs  weather_codes.rs
tests/fixtures/: response.json
