[package]
name = "weather-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
teloxide = "0.12.2"
tokio = { version =  "1.29", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0.171"
