[package]
name = "weather-bot"
default-run = "weather-bot"
version = "0.1.0"
edition = "2021"
autors = ["Roman Averin <mail@romanaverin.com>"]
repository = "https://github.com/RomanAverin/weather-bot/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["full"] }
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.113"
serde = "1.0"
anyhow = "1.0.79"
