[package]
name = "weather-bot"
default-run = "weather-bot"
version = "0.1.0"
edition = "2021"
autors = ["Roman Averin <mail@romanaverin.com>"]
repository = "https://github.com/RomanAverin/weather-bot/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "db"
path = "src/db.rs"

[[bin]]
name = "db-sync"
test = false
bench = false

[dependencies]
teloxide = { version = "0.13", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4.22"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.127"
serde = "1.0.209"
anyhow = "1.0.86"
dotenv-vault = "0.1.2"
tokio-postgres = "0.7.12"
